--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -2,18 +2,17 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 6px 0;
+    padding: 8px 0;
     margin: 0 auto;
-
     background-color: blue;
 }
 
 .search-form>input {
     outline: none;
     border: none;
-    padding: 5px 8px;
+    padding: 8px 8px;
     border-radius: 12px;
-    margin-right: 10px;
+    margin-right: 50px;
 }
 
 .search-form>button {
@@ -21,30 +20,38 @@
     margin: 0;
     border: none;
     border-radius: 12px;
+    font-size: 16px;
+    font-weight: 700;
 
     transition: background-color 250ms ease, transform 100ms ease;
 }
 
 .search-form>button:hover {
     background-color: rgb(31, 154, 202);
+    font-weight: lighter;
 }
 
 .search-form>button:active {
-    transform: translateY(1.5px);
+    transform: translateY(2.5px);
 }
 
 .load-more {
     margin: 0 auto;
     display: block;
+    padding: 5px;
+    border: none;
+    color: white;
+    background-color: blue;
+    font-size: 14px;
+    font-weight: 700;
+
 }
 
 .gallery {
     display: flex;
     flex-wrap: wrap;
-
     max-width: 1140px;
     margin: 20px auto;
-
     gap: 10px;
 }
 
@@ -53,25 +60,16 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    flex-basis: calc((100% - 40px) / 5);
+    flex-basis: calc((100% - 40px) / 4);
 
     transition: box-shadow 250ms ease, transform 250ms ease;
 }
 
 .gallery__item:hover,
 .gallery__item:focus {
-    transform: scale(1.04);
-
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-
+    transform: scale(1.1);
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-        1px 4px 6px rgba(0, 0, 0, 0.16);
-}
-
-.gallery__item:hover .gallery__image {
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .gallery__link {
@@ -84,7 +82,7 @@
     height: 100%;
     object-fit: cover;
     transition: border-top-left-radius 250ms ease,
-        border-top-right-radius 250ms ease;
+    border-top-right-radius 250ms ease;
 }
 
 .gallery__info {
