--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -20,15 +20,16 @@
     margin: 0;
     border: none;
     border-radius: 12px;
-    font-size: 16px;
+    font-size: 15px;
+    color: blue;
     font-weight: 700;
 
-    transition: background-color 250ms ease, transform 100ms ease;
+    transition: color 250ms ease, transform 100ms ease;
 }
 
 .search-form>button:hover {
-    background-color: rgb(31, 154, 202);
-    font-weight: lighter;
+    font-weight: bold;
+    color: black;
 }
 
 .search-form>button:active {
@@ -46,7 +47,13 @@
     font-weight: 700;
 
 }
-
+.load-more:hover {
+    font-weight: bold;
+    background-color: white;
+    color: blue;
+    border: 1px solid blue;
+    scale: 1.1;
+}
 .gallery {
     display: flex;
     flex-wrap: wrap;
@@ -61,7 +68,6 @@
     align-items: center;
     flex-direction: column;
     flex-basis: calc((100% - 40px) / 4);
-
     transition: box-shadow 250ms ease, transform 250ms ease;
 }
 
